First round of porting + bugfixes and API changes