@@ -1,13 +1,3 @@
-/*******************************************************************************
- * Copyright (c) 2011-2014 SirSengir.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the GNU Lesser Public License v3
- * which accompanies this distribution, and is available at
- * http://www.gnu.org/licenses/lgpl-3.0.txt
- *
- * Various Contributors including, but not limited to:
- * SirSengir (original work), CovertJaguar, Player, Binnie, MysteriousAges
- ******************************************************************************/
 package forestry.apiculture.multiblock;
 
 import com.mojang.authlib.GameProfile;
@@ -22,25 +12,25 @@ import forestry.core.inventory.IInventoryAdapter;
 import forestry.core.multiblock.FakeMultiblockController;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Holder;
+import net.minecraft.core.HolderLookup;
 import net.minecraft.world.level.biome.Biome;
 import net.minecraft.world.level.biome.Biomes;
 import net.minecraft.world.phys.Vec3;
-import net.minecraftforge.registries.ForgeRegistries;
 
 import javax.annotation.Nullable;
-import java.util.Collections;
+import java.util.List;
 
 public enum FakeAlvearyController implements FakeMultiblockController, IAlvearyControllerInternal {
 	INSTANCE;
 
 	@Override
 	public Iterable<IBeeModifier> getBeeModifiers() {
-		return Collections.emptyList();
+		return List.of();
 	}
 
 	@Override
 	public Iterable<IBeeListener> getBeeListeners() {
-		return Collections.emptyList();
+		return List.of();
 	}
 
 	@Override
@@ -75,7 +65,7 @@ public enum FakeAlvearyController implements FakeMultiblockController, IAlvearyC
 	}
 
 	@Override
-	public BlockPos getCoordinates() {
+	public BlockPos getBlockPos() {
 		return BlockPos.ZERO;
 	}
 
@@ -85,8 +75,8 @@ public enum FakeAlvearyController implements FakeMultiblockController, IAlvearyC
 	}
 
 	@Override
-	public Holder<Biome> getBiome() {
-		return ForgeRegistries.BIOMES.getDelegateOrThrow(Biomes.PLAINS);
+	public Holder<Biome> getBiome(HolderLookup.Provider registries) {
+		return registries.holderOrThrow(Biomes.PLAINS);
 	}
 
 	@Override
